# zmk-config-Skinner39

./: CMakeLists.txt  Kconfig  README.md  build.yaml  skinner39.json  skinner39.keymap
.github/workflows/: build.yml  draw.yml
boards/shields/keysmith_glance/: CMakeLists.txt  Kconfig.defconfig  Kconfig.shield  custom_status_screen.c  keysmith_glance.conf  keysmith_glance.zmk.yml
boards/shields/keysmith_glance/widgets/: art.c  bolt.c  host_glance.c  host_glance.h  peripheral_status.c  status.c  util.h
boards/yangxing/skinner39/: Kconfig.defconfig  Kconfig.skinner39_left  Kconfig.skinner39_right  board.cmake  board.yml  pre_dt_board.cmake  skinner39.dtsi  skinner39.yaml  skinner39.zmk.yml  skinner39_left_nrf52840_zmk.dts  skinner39_left_nrf52840_zmk_defconfig  skinner39_right_nrf52840_zmk.dts  skinner39_right_nrf52840_zmk_defconfig
config/: skinner39.conf  skinner39.keymap  west.yml
docs/: 2026-06-10-split-ble-root-cause-and-fix.md  2026-06-12-glance-ble-flash-runbook.md  2026-06-12-soak-interim-report.md  2026-06-12-status-report-channel.md
keymap-drawer/: keymap_drawer.config.yaml  skinner39.dwg.yaml  skinner39.layout.json  skinner39.yaml
keymap-drawer/candidates/: skinner39-jul29-forkHEAD-2ca0c05.keymap  skinner39-may26.keymap
modules/zmk-input-processor-one-euro/: CMakeLists.txt  Kconfig  README.md
modules/zmk-input-processor-one-euro/src/: Kconfig  input_processor_one_euro.c
modules/zmk-input-processor-one-euro/zephyr/: module.yml
src/: CMakeLists.txt  keysmith_status_report.c
tools/: glance-ble-probe.sh  split-log-capture.sh  uf2_payload.py
(+10 files in other folders)
